shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_update_groups_with_error.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_update_groups(&config, &settings, Some(vec![\"test-1\".to_string()]))"
---
Ok(
    CmdExit {
        code: 78,
        message: Some(
            "Could not update checks group. error message
        ),
    },
)
