shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_update_severity-2.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: config.get_settings_from_file()
snapshot_kind: text
---
Ok(
    Settings {
        challenge: Math,
        includes_severities: [
            High,
            Critical,
        ],
        ignores_patterns_ids: [],
        deny_patterns_ids: [],
    },
)
