shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__can_run_update_severity_with_error.snap
---
source: shellfirm/src/bin/cmd/config.rs
expression: "run_update_severity(&config, &settings, Some(vec![\"high\".to_string()]))"
snapshot_kind: text
---
Ok(
    CmdExit {
        code: 78,
        message: Some(
            "Could not update severities. error message
        ),
    },
)
