shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__config__test_config_cli_command__reset_config_restores_defaults.snap
---
source: shellfirm/src/bin/cmd/config.rs
assertion_line: 1546
expression: config.get_settings_from_file()
---
Ok(
    Settings {
        challenge: Math,
        enabled_groups: [
            "aws",
            "azure",
            "base",
            "database",
            "docker",
            "flyio",
            "fs",
            "gcp",
            "git",
            "github",
            "heroku",
            "kubernetes",
            "mongodb",
            "mysql",
            "netlify",
            "network",
            "npm",
            "psql",
            "redis",
            "terraform",
            "vercel",
        ],
        disabled_groups: [],
        ignores_patterns_ids: [],
        deny_patterns_ids: [],
        context: ContextConfig {
            protected_branches: [
                "main",
                "master",
                "production",
                "release/*",
            ],
            production_k8s_patterns: [
                "prod",
                "production",
                "prd",
                "live",
            ],
            production_env_vars: {
                "ENVIRONMENT": "production",
                "NODE_ENV": "production",
                "RAILS_ENV": "production",
            },
            sensitive_paths: [],
            escalation: EscalationConfig {
                elevated: Enter,
                critical: Yes,
            },
        },
        audit_enabled: true,
        blast_radius: true,
        min_severity: None,
        agent: AgentConfig {
            auto_deny_severity: High,
            require_human_approval: false,
            challenge: Inherit,
            min_severity: Inherit,
            severity_escalation: Inherit,
        },
        llm: None,
        wrappers: WrappersConfig {
            tools: {},
            challenge: Inherit,
            min_severity: Inherit,
        },
        severity_escalation: SeverityEscalationConfig {
            enabled: true,
            critical: Yes,
            high: Enter,
            medium: Math,
            low: Math,
            info: Math,
        },
        group_escalation: {},
        check_escalation: {},
    },
)
